ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: first.info
    http:
      paths:
      - path: /
        backend:
          serviceName: first-deployment
          servicePort: 8080
  - host: second.info
    http:
      paths:
      - path: /
        backend:
          serviceName: second-deployment
          servicePort: 8080
